change image file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</head>
 	<body>
 		<div class="imageContainer">
-		<img src="img/im1.jpg" id="mainImage">
+		<img src="img/im2.jpg" id="mainImage">
 		</div>
 		<br>
 		<h1> 태희와 자림의 결혼식에 초대합니다 </h1>
@@ -65,11 +65,11 @@
 		<br>
 		<a href="https://www.icloud.com/sharedalbum/ko-kr/#B0AGWZuqD77Kcg" target="_blank">
 			<div class="grid-container">
-				<img class="grid-item" src="img/im7.jpg">
+				{% comment %} <img class="grid-item" src="img/im7.jpg">
 				<img class="grid-item" src="img/im3.jpg">
 				<img class="grid-item" src="img/im4.jpg">
 				<img class="grid-item" src="img/im5.jpg">
-				<img class="grid-item" src="img/im6.jpg">
+				<img class="grid-item" src="img/im6.jpg"> {% endcomment %}
 		  </div>
 		</a>
 		<footer>
