--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</head>
 	<body>
 		<div class="imageContainer">
-		<img src="img/im2.jpg" id="mainImage">
+		<img src="img/im2.jpeg" id="mainImage">
 		</div>
 		<br>
 		<h1> 태희와 자림의 결혼식에 초대합니다 </h1>
@@ -53,7 +53,14 @@
 		<div align="center" max-width="600px">
 			<!-- * 카카오맵 - 지도퍼가기 -->
 		<div class="root_daum_roughmap root_daum_roughmap_landing">
-			<a href="https://map.kakao.com/?urlX=485890&urlY=1085737&urlLevel=3&map_type=TYPE_MAP&map_hybrid=false" target="_blank"><img width="504" height="310" src="https://map2.daum.net/map/mapservice?FORMAT=PNG&SCALE=2.5&MX=485890&MY=1085737&S=0&IW=504&IH=310&LANG=0&COORDSTM=WCONGNAMUL&logo=kakao_logo" style="border:1px solid #ccc"></a><div class="hide" style="overflow:hidden;padding:7px 11px;border:1px solid #dfdfdf;border-color:rgba(0,0,0,.1);border-radius:0 0 2px 2px;background-color:#f9f9f9;width:482px;"><strong style="float: left;"><img src="//t1.daumcdn.net/localimg/localimages/07/2018/pc/common/logo_kakaomap.png" width="72" height="16" alt="카카오맵"></strong><div style="float: right;position:relative"><a style="font-size:12px;text-decoration:none;float:left;height:15px;padding-top:1px;line-height:15px;color:#000" target="_blank" href="https://map.kakao.com/?urlX=485890&urlY=1085737&urlLevel=3&map_type=TYPE_MAP&map_hybrid=false">지도 크게 보기</a></div></div>
+			<a href="https://map.kakao.com/?urlX=485890&urlY=1085737&urlLevel=3&map_type=TYPE_MAP&map_hybrid=false" target="_blank"><img width="504" height="310" 
+			src="https://map2.daum.net/map/mapservice?FORMAT=PNG&SCALE=2.5&MX=485890&MY=1085737&S=0&IW=504&IH=310&LANG=0&COORDSTM=WCONGNAMUL&logo=kakao_logo" 
+			style="border:1px solid #ccc"></a>
+			<div class="hide" style="overflow:hidden;padding:7px 11px;border:1px solid #dfdfdf;border-color:rgba(0,0,0,.1);border-radius:0 0 2px 2px;background-color:#f9f9f9;width:482px;">
+			<strong style="float: left;">
+			<img src="//t1.daumcdn.net/localimg/localimages/07/2018/pc/common/logo_kakaomap.png" width="72" height="16" alt="카카오맵"></strong><div style="float: right;position:relative">
+			<a style="font-size:12px;text-decoration:none;float:left;height:15px;padding-top:1px;line-height:15px;color:#000" target="_blank" 
+			href="https://map.kakao.com/?urlX=485890&urlY=1085737&urlLevel=3&map_type=TYPE_MAP&map_hybrid=false">지도 크게 보기</a></div></div>
 		</div>
 		</div>
 		<br>
@@ -65,15 +72,6 @@
 		</p>
 		<br>
 		<br>
-		{% comment %} <a href="https://www.icloud.com/sharedalbum/ko-kr/#B0AGWZuqD77Kcg" target="_blank">
-			<div class="grid-container">
-				{% comment %} <img class="grid-item" src="img/im7.jpg">
-				<img class="grid-item" src="img/im3.jpg">
-				<img class="grid-item" src="img/im4.jpg">
-				<img class="grid-item" src="img/im5.jpg">
-				<img class="grid-item" src="img/im6.jpg"> 
-		  </div>
-		</a> {% endcomment %}
 		<footer>
 			코로나의 어려움 속에서도 귀하신 걸음을 하여 주셔서 너무 감사 드립니다.  <br>
 			코로나로 인하여 음식대접을 못해 드리게 되어 너무 죄송합니다. <br>
@@ -81,16 +79,5 @@
 			<br>
 		</footer>
 		<br>
-
-{% comment %} <script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
-
-<script charset="UTF-8">
-	new daum.roughmap.Lander({
-		"timestamp" : "1597653753785",
-		"key" : "2zok9",
-		"mapWidth" : "375",
-		"mapHeight" : "400"
-	}).render();
-</script> {% endcomment %}
 	</body>
 </html>
