change image file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</head>
 	<body>
 		<div class="imageContainer">
-		<img src="img/im2.jpeg" id="mainImage">
+		<img src="img/im4.png" id="mainImage">
 		</div>
 		<br>
 		<h1> 태희와 자림의 결혼식에 초대합니다 </h1>
