--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</head>
 	<body>
 		<div class="imageContainer">
-		<img src="img/im4.png" id="mainImage">
+		<img src="img/im7.jpg" id="mainImage">
 		</div>
 		<br>
 		<h1> 태희와 자림의 결혼식에 초대합니다 </h1>
@@ -56,11 +56,11 @@
 			<a href="https://map.kakao.com/?urlX=485890&urlY=1085737&urlLevel=3&map_type=TYPE_MAP&map_hybrid=false" target="_blank"><img width="504" height="310" 
 			src="https://map2.daum.net/map/mapservice?FORMAT=PNG&SCALE=2.5&MX=485890&MY=1085737&S=0&IW=504&IH=310&LANG=0&COORDSTM=WCONGNAMUL&logo=kakao_logo" 
 			style="border:1px solid #ccc"></a>
-			<div class="hide" style="overflow:hidden;padding:7px 11px;border:1px solid #dfdfdf;border-color:rgba(0,0,0,.1);border-radius:0 0 2px 2px;background-color:#f9f9f9;width:482px;">
+			{% comment %} <div class="hide" style="overflow:hidden;padding:7px 11px;border:1px solid #dfdfdf;border-color:rgba(0,0,0,.1);border-radius:0 0 2px 2px;background-color:#f9f9f9;width:482px;">
 			<strong style="float: left;">
 			<img src="//t1.daumcdn.net/localimg/localimages/07/2018/pc/common/logo_kakaomap.png" width="72" height="16" alt="카카오맵"></strong><div style="float: right;position:relative">
 			<a style="font-size:12px;text-decoration:none;float:left;height:15px;padding-top:1px;line-height:15px;color:#000" target="_blank" 
-			href="https://map.kakao.com/?urlX=485890&urlY=1085737&urlLevel=3&map_type=TYPE_MAP&map_hybrid=false">지도 크게 보기</a></div></div>
+			href="https://map.kakao.com/?urlX=485890&urlY=1085737&urlLevel=3&map_type=TYPE_MAP&map_hybrid=false">지도 크게 보기</a></div></div> {% endcomment %}
 		</div>
 		</div>
 		<br>
