change image file

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<meta name="og:site_name" content="손태희와 서자림의 결혼식에 초대합니다"/>
-		<link rel="canonical" href="https://thsohn17.github.io"/>
-		<meta name="twitter:url" content="https://thsohn17.github.io"/>
-		<meta name="og:url" content="https://thsohn17.github.io"/>
+		<link rel="canonical" href="https://thsohn.github.io"/>
+		<meta name="twitter:url" content="https://thsohn.github.io"/>
+		<meta name="og:url" content="https://thsohn.github.io"/>
 		<title>손태희와 서자림의 결혼식에 초대합니다</title>
 		<meta name="twitter:title" content="손태희와 서자림의 결혼식에 초대합니다"/>
 		<meta name="og:title" content="손태희와 서자림의 결혼식에 초대합니다"/>
