--- a/index.html
+++ b/index.html
@@ -62,15 +62,16 @@
 		<br>
 		<br>
 		<p id="shuttle">
-		주차공간이 협소할 수 있으니 가급적 대중교통을 이용하시기 바랍니다. <br>
-		2호선 안양역 1번출구에서 3번, 3-1번 마을버스, 4호선 평촌역에서 7번 마을버스를 타고 임곡주공아파트에서 내리시면 <br>
-		안내 요원이 대기하여 도움을 드릴겁니다. 
+    4호선 범계역 3번 출구 --> 나온 방향으로 쭉 가서 길을 건너 [목련선경아파트] 정류장에서 7번 마을버스를 탑승 후,  [임곡주공아파트](종점)에서 하차)(20분 소요) <br>
+	  안양동초등학교 방면으로 도보 5분 <br>
+    1호선 안양역 1번 출구 --> [안양역]정류장에서 3-1번 마을버스 탑승 후 [임곡주공아파트](종점)하차(20분 소요), 안양동초등학교 방면으로 도보 5분<br>
+    자가용
+    내비게이션에 [안양동초등학교] 검색
 		</p>
 		<br>
 		<br>
 		<footer>
-			코로나의 어려움 속에서도 귀하신 걸음을 하여 주셔서 너무 감사 드립니다.  <br>
-			코로나로 인하여 음식대접을 못해 드리게 되어 너무 죄송합니다. <br>
+			코로나로 인하여 식사는 대접하지 못하게 되었습니다. 넓은 마음으로 양해 부탁드립니다. <br>
 			돌아가실 때에 소정의 선물을 준비하셨으니 꼭 받아가시기 바랍니다. <br>
 			<br>
 		</footer>
