change jarim command

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		<h1> 태희와 자림의 결혼식에 초대합니다 </h1>
 
 		<div id="parents">
-			손재학 🤍 황분옥<span class="suffix">의 독자  </span> <span style="font-weight:bold">손태희</span><br>
-			서원교 🤍 박동미<span class="suffix">의 장녀  </span> <span style="font-weight:bold">서자림</span>
+			손재학 🤍 황분옥<span class="suffix">의 장남  </span> <span style="font-weight:bold">태희</span><br>
+			서원교 🤍 박동미<span class="suffix">의 장녀  </span> <span style="font-weight:bold">자림</span>
 		</div>
 		<br>
 		<h2> 초대의 말 </h2>
