change jarim command

--- a/index.html
+++ b/index.html
@@ -62,11 +62,10 @@
 		<br>
 		<br>
 		<p id="shuttle">
-    4호선 범계역 3번 출구 --> 나온 방향으로 쭉 가서 길을 건너 [목련선경아파트] 정류장에서 7번 마을버스를 탑승 후, <br> [임곡주공아파트](종점)에서 하차)(20분 소요) 
+    대중교통: 4호선 범계역 3번 출구 --> 나온 방향으로 쭉 가서 길을 건너 [목련선경아파트] 정류장에서 7번 마을버스를 탑승 후, <br> [임곡주공아파트](종점)에서 하차)(20분 소요) 
 	  안양동초등학교 방면으로 도보 5분 <br>
-    1호선 안양역 1번 출구 --> [안양역]정류장에서 3-1번 마을버스 탑승 후 [임곡주공아파트](종점)하차(20분 소요), <br>안양동초등학교 방면으로 도보 5분
-    자가용<br>
-    내비게이션에 [안양동초등학교] 검색
+    1호선 안양역 1번 출구 --> [안양역]정류장에서 3-1번 마을버스 탑승 후 [임곡주공아파트](종점)하차(20분 소요), 안양동초등학교 방면으로 도보 5분 <br>
+    자가용: 내비게이션에 [안양동초등학교] 검색
 		</p>
 		<br>
 		<br>
