change jarim command

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<p class="poem"> 
 		사랑하는 부모님의 품을 떠나 <br>
 		두 사람이 하나 되어 <br>
-		이방인의 길을 더 힘있게 걸어 가고자 합니다. <br>
+		나그네의 길을 더 힘있게 걸어 가고자 합니다. <br>
 		저희 서툰 첫 걸음의 증인이 되어 주세요. <br>
 		<br>
 		</p>
@@ -65,7 +65,8 @@
     대중교통: 4호선 범계역 3번 출구 --> 나온 방향으로 쭉 가서 길을 건너 [목련선경아파트] 정류장에서 7번 마을버스를 탑승 후, <br> [임곡주공아파트](종점)에서 하차)(20분 소요) 
 	  안양동초등학교 방면으로 도보 5분 <br>
     1호선 안양역 1번 출구 --> [안양역]정류장에서 3-1번 마을버스 탑승 후 [임곡주공아파트](종점)하차(20분 소요), 안양동초등학교 방면으로 도보 5분 <br>
-    자가용: 내비게이션에 [안양동초등학교] 검색
+    자가용: 내비게이션에 [안양동초등학교] 검색<br>
+    택시: 안양역 2번 출구에서 택시 탑승 후  [안양동초등학교]에서 하차(10분 소요)
 		</p>
 		<br>
 		<br>
