--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<br>
 		<footer>
 			코로나로 인하여 식사는 대접하지 못하게 되었습니다. 넓은 마음으로 양해 부탁드립니다. <br>
-			돌아가실 때에 소정의 선물을 준비하셨으니 꼭 받아가시기 바랍니다. <br>
+			돌아가실 때에 소정의 선물을 꼭 받아가시기 바랍니다. <br>
 			<br>
 		</footer>
 		<br>
